@@ -1,5 +1,10 @@
 2007-12-07  Guillaume Deslandes  <deslandes@gostai.com>
 
+	Mode delete of modif_.
+	* src/ucommand.cc: Here.
+
+2007-12-07  Guillaume Deslandes  <deslandes@gostai.com>
+
 	Remove memory leaks.
 	* src/ucommand.cc: Here.
 	Delete expression for assign modifiers.
